// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link render correctly with no variant 1`] = `
<DocumentFragment>
  .cache-kxomz {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
}

.cache-kxomz:hover,
.cache-kxomz:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
    class="e4bq1r51 cache-kxomz"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with target blank 1`] = `
<DocumentFragment>
  .cache-15hennh {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #4F0599;
}

.cache-15hennh:hover,
.cache-15hennh:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-15hennh:hover,
.cache-15hennh:focus {
  color: #4F0599;
}

.cache-ziq5xq {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
  padding-left: 2px;
  opacity: 0.5;
}

.cache-ziq5xq.cache-ziq5xq {
  vertical-align: top;
}

<a
    class="e4bq1r51 cache-15hennh"
    href="/"
    rel="noopener noreferrer"
    target="_blank"
  >
    Hello
    <svg
      class="e4bq1r50 etwatq50 cache-ziq5xq"
      viewBox="0 0 24 24"
    >
      <path
        d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
      />
    </svg>
  </a>
</DocumentFragment>
`;

exports[`Link render correctly with to props 1`] = `
<DocumentFragment>
  .cache-15hennh {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #4F0599;
}

.cache-15hennh:hover,
.cache-15hennh:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-15hennh:hover,
.cache-15hennh:focus {
  color: #4F0599;
}

<a
    class="e4bq1r51 cache-15hennh"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render blue 1`] = `
<DocumentFragment>
  .cache-im4zsd {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #3F6ED8;
}

.cache-im4zsd:hover,
.cache-im4zsd:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-im4zsd:hover,
.cache-im4zsd:focus {
  color: #1e4293;
}

<a
    class="e4bq1r51 cache-im4zsd"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render gray 1`] = `
<DocumentFragment>
  .cache-qklyl8 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #B2B6C3;
}

.cache-qklyl8:hover,
.cache-qklyl8:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-qklyl8:hover,
.cache-qklyl8:focus {
  color: #798096;
}

<a
    class="e4bq1r51 cache-qklyl8"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render inherit 1`] = `
<DocumentFragment>
  .cache-1rhz899 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: inherit;
}

.cache-1rhz899:hover,
.cache-1rhz899:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-1rhz899:hover,
.cache-1rhz899:focus {
  color: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<a
    class="e4bq1r51 cache-1rhz899"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render primary 1`] = `
<DocumentFragment>
  .cache-15hennh {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #4F0599;
}

.cache-15hennh:hover,
.cache-15hennh:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-15hennh:hover,
.cache-15hennh:focus {
  color: #4F0599;
}

<a
    class="e4bq1r51 cache-15hennh"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;

exports[`Link variant render white 1`] = `
<DocumentFragment>
  .cache-1927mrf {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #151A2D;
}

.cache-1927mrf:hover,
.cache-1927mrf:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-1927mrf:hover,
.cache-1927mrf:focus {
  color: #000;
}

<a
    class="e4bq1r51 cache-1927mrf"
    href="/"
  >
    Hello
  </a>
</DocumentFragment>
`;
